--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   }
   
   h1 {
-    color: white;
+    color: olivedrab;
     text-align: center;
   }
   h2 {
@@ -16,6 +16,6 @@ body {
   }
   
   p {
-    font-family: verdana;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
   }
